--- a/.github/workflows/dev_db.yml
+++ b/.github/workflows/dev_db.yml
@@ -25,7 +25,7 @@ jobs:
           ~/.cargo/registry/index/
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('~/.cargo/bin/sqlx') }}
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: View cargo bin dir
       run: ls -la ~/.cargo/bin/
@@ -35,11 +35,6 @@ jobs:
 
     - name: View cargo bin dir
       run: ls -la ~/.cargo/bin/
-
-    - name: Experiment with hashFiles
-      run: |
-        echo ${{ hashFiles('Cargo.lock') }}
-        echo ${{ hashFiles('~/.cargo/bin/sqlx') }}
 
     # - uses: Swatinem/rust-cache@v2
 
