--- a/.github/workflows/dev_db.yml
+++ b/.github/workflows/dev_db.yml
@@ -43,4 +43,6 @@ jobs:
       run: ls -la
 
     - name: Show files after running DB script
-      run: ls -la migrations
+      run: |
+        ls -la migrations
+        cat migrations/*
